--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,7 +201,8 @@ StaticMeshActor.WorldPartition=True
 StaticMeshActor.Actor=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+DebuggerAttached=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
